--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -47,27 +47,66 @@
     --size-default: 1rem;
     
     
-    }
+}
     
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-    body {
-        color: var(--text-color);
-    }
+body {
+    color: var(--text-color);
+}
 
-    h1 {
-        font-family: var(--primary-font);
-        font-size: var(--heading-1);
-    }
+h1 {
+    font-family: var(--primary-font);
+    font-size: var(--heading-1);
+}
     
-    h2, h3, h4, h5, h6 {
-        font-family: var(--secondary-color);
-    }
+h2, h3, h4, h5, h6 {
+    font-family: var(--secondary-color);
+}
 
-    p {
-        font-family: var(--paragraph-font);
-    }
+h2 {
+    font-family: var(--secondary-color);
+    font-size: var(--heading-2);
+}
+
+h3 {
+    font-family: var(--secondary-color);
+    font-size: var(--heading-3);
+}
+
+h4 {
+    font-family: var(--secondary-color);
+    font-size: var(--heading-4);
+}
+
+h5 {
+    font-family: var(--secondary-color);
+    font-size: var(--heading-5);
+}
+
+h6 {
+    font-family: var(--secondary-color);
+    font-size: var(--heading-6);
+}
+
+p {
+    font-family: var(--paragraph-font);
+}
+
+/* This class makes sure the content u wrote under this class is only visible for screenreaders */
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
