#5 added input to the header

--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -2,6 +2,7 @@
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/artwork">Art</a>
+    <input type="text" name="Search" placeholder="Search...">
         <div class="hamburger-menu">
             <span class="bar bar1"></span>
             <span class="bar bar2"></span>
