--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -10,6 +10,10 @@
     font-family: futura-book;
     src:url('/assets/fonts/Futura-Book-font.ttf');
 }
+@font-face {
+    font-family: futura-heavy;
+    src:url('/assets/fonts/Futura-Heavy-font.ttf');
+}
 
 :root {
     /* colors */
@@ -22,6 +26,7 @@
 
     /* fonts */
     --primary-font: 'futura-bold', sans-serif;
+    --primary-font-extra: 'futura-heavy', sans-serif;
     --secondary-font: 'futura-medium', Tahoma;;
     --paragraph-font: 'futura-book', Tahoma;
 
@@ -57,43 +62,39 @@
 
 body {
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 h1 {
-    font-family: var(--primary-font);
-    font-size: var(--heading-1);
+    font-family: var(--primary-font-extra);
+    font-size: var(--size-xxl);
 }
     
-h2, h3, h4, h5, h6 {
-    font-family: var(--secondary-color);
+h2, h3, h4, h5, h6, a {
+    font-family: var(--secondary-font);
 }
 
 h2 {
-    font-family: var(--secondary-color);
     font-size: var(--heading-2);
 }
 
 h3 {
-    font-family: var(--secondary-color);
     font-size: var(--heading-3);
 }
 
 h4 {
-    font-family: var(--secondary-color);
     font-size: var(--heading-4);
 }
 
 h5 {
-    font-family: var(--secondary-color);
     font-size: var(--heading-5);
 }
 
 h6 {
-    font-family: var(--secondary-color);
     font-size: var(--heading-6);
 }
 
-p {
+p{
     font-family: var(--paragraph-font);
 }
 
@@ -110,3 +111,23 @@ p {
     white-space: nowrap;
     border: 0;
 }
+
+.bar {
+    display: block;
+    height: 8px;
+    background-color: black;
+    margin-bottom: 6px;
+}
+
+.bar1 {
+    width: 80px;
+    margin-left: 0;
+  }
+  .bar2 {
+    width: 60px;
+    margin-left: 20px;
+  }
+  .bar3 {
+    width: 40px;
+    margin-left: 40px;
+  }
