--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
+    <link rel="stylesheet" href="/styles/main-style.css">
     <title>Rijksmuseum x 270</title>
 </head>
 <body>
