--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/stylesheet.css">
-    <link rel="stylesheet" href="/styles/main-style.css">
+    <link rel="stylesheet" href="/styles/main-style.css">`
+    <script src="/scripts/script.js" defer></script>
     <title>Rijksmuseum x 270</title>
 </head>
 <body>
