--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -21,6 +21,7 @@
     --secondary-color: #F8F8F8;
 
     --text-color: #000;
+    --white-text: #fff;
     --active-color: #597C8B;
     --hover-color: #984A4A;
 
