--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -1,11 +1,13 @@
-    <header>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/artwork">Art</a>
-    <input type="text" name="Search" placeholder="Search...">
-        <div class="hamburger-menu">
-            <span class="bar bar1"></span>
-            <span class="bar bar2"></span>
-            <span class="bar bar3"></span>
-        </div>
-    </header>
+<header>
+    <button class="hamburger-menu">
+        <span class="bar bar1"></span>
+        <span class="bar bar2"></span>
+        <span class="bar bar3"></span>
+    </button> 
+    <ul class="menu-items">
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/artwork">Art</a></li>
+        <li><input type="text" name="Search" placeholder="Search..."></li>
+    </ul>
+</header>
