removed bars, styling changes on header

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -10,9 +10,9 @@
             <span class="ofpaint">OF PAINT</span>
         </h1>
         <div class="hero">
-            <span class="diagonal-bar back"></span>
+            {% comment %} <span class="diagonal-bar back"></span> {% endcomment %}
             <img class="hero-image" src="assets/images/artwork-1.png" alt="hero-image">
-            <span class="diagonal-bar"></span>
+            {% comment %} <span class="diagonal-bar"></span> {% endcomment %}
         </div>
     </main>
 
