--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -7,6 +7,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: flex-end;   
     padding: 1.5rem;
     ul {
         display: none;
