--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -5,9 +5,10 @@
         <span class="bar bar3"></span>
     </button> 
     <ul class="menu-items">
+        <li><a href="/artwork">Art</a></li>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/artwork">Art</a></li>
+        <li><a href="/favorites">Favorites</a></li>
         <li><input type="text" name="Search" placeholder="Search..."></li>
     </ul>
 </header>
