--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -100,6 +100,11 @@ p{
     font-family: var(--paragraph-font);
 }
 
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
 /* This class makes sure the content u wrote under this class is only visible for screenreaders */
 
 .sr-only {
@@ -112,6 +117,19 @@ p{
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+
+/* Hamburger Menu */
+
+.hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    background: none;
+    border: none;
+    &:hover {
+        transform: scale(1.1);
+        transition: transform 0.3s ease-in-out;
+    }
 }
 
 .bar {
