#22 Fallback class namen aangemaakt

--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -4,11 +4,11 @@
         <span class="bar bar2"></span>
         <span class="bar bar3"></span>
     </button> 
-    <ul class="menu-items">
-        <li><a href="/artwork">Art</a></li>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/favorites">Favorites</a></li>
-        <li><input type="text" name="Search" placeholder="Search..."></li>
+    <ul class="menufb">
+        <li class="itemfb"><a href="/artwork">Art</a></li>
+        <li class="itemfb"><a href="/">Home</a></li>
+        <li class="itemfb"><a href="/about">About</a></li>
+        <li class="itemfb"><a href="/favorites">Favorites</a></li>
+        <li class="itemfb"><input type="text" name="Search" placeholder="Search..."></li>
     </ul>
 </header>
