--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -42,6 +42,7 @@
     
     /* extra font sizes */
     --size-extral: 6rem;
+    --size-xxxl: 5rem;
     --size-xxl: 3.75rem;
     --size-xl: 3rem;
     --size-lg: 2.625rem;
