--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -16,9 +16,9 @@ header {
         position: fixed;
         top: 0;
         right: -50vw;
-        padding: 2rem;
+        padding: 3rem;
         height: 100vh;
-        width: 50vw;
+        width: 40vw;
         z-index: 998;
         transition: right 0.3s ease-in-out;
         &.active {
@@ -30,7 +30,7 @@ header {
             margin-bottom: 2rem;
             list-style: none;
             &:hover {
-                transform: scale(1.2);
+                transform: scale(1.1);
                 transition: transform 0.2s ease-in-out;
             }
         }
@@ -55,17 +55,37 @@ main {
         position: absolute;
         top: 13%;
         z-index: -1;
+        @media (min-width: 768px) {
+            left: 15%;
+            font-size: var(--size-xxxl);
+        }
+        @media (min-width: 1366px ) {
+            left: 5%;
+            top: 15%;
+            font-size: var(--size-extral);
+        }
     }
     .ofpaint {
         margin-left: 3rem;
     }
     .hero-image {
-        display: inline-block;
-        width: 35rem;
-        position: absolute;
-        right: 5%;
-        top: 21%;
+        width: 22rem;
+        position: sticky;
+        top: 0;
+        left: 50%;
+        transform: translateX(-20vw) translateY(35vh);
         z-index: -1;
+        @media (min-width: 768px) {
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%) translateY(65%);
+            width: 28rem;
+        }
+        @media (min-width: 1366px ) {
+            top: 0%;
+            width: 35rem;
+            transform: translateX(-20%) translateY(10%);
+        }
     }
 }
 
@@ -80,10 +100,17 @@ main {
     transform: translateX(-50%) rotate(-35deg);
     z-index: -1;
     pointer-events: none; /* optioneel: voorkomt klikken */
+    @media (min-width: 1366px ) {
+        width: 70vw;
+        top: 50%;
+    }
 }
 .back {
     top: 53%;
     z-index: -1;
+    @media (min-width: 1366px ) {
+        top: 43%;
+    }
 }
 
 /* Footer Styling */
