#10 New prototype with carrousel

--- a/views/artwork.liquid
+++ b/views/artwork.liquid
@@ -2,7 +2,29 @@
 
 {% include 'partials/header.liquid' %}
 
-    <section class="artList">
+<section class="art-container">
+
+  <button class="art-prev" aria-label="Vorige slide">&lt;</button>
+
+  <section class="art-carrousel">
+    {% for art in art %}
+        <article> 
+            <a href="/details/{{art.objectNumber}}">
+            {% if art.webImage %}
+                <img src="{{ art.webImage.url }}" alt="{{ art.title }}" width="300" />
+            {% endif %}
+            <h3>{{ art.title }}</h3>
+            <p>{{ art.longTitle }}</p>
+                </a>
+        </article>
+    {% endfor %}
+  </section>
+
+  <button class="art-next" aria-label="Volgende slide">&gt;</button>
+
+</section>
+
+    {% comment %} <section class="artList">
         <ul>
         {% for art in art %}
             <li>
@@ -15,7 +37,7 @@
             </li>
         {% endfor %}
         </ul> 
-    </section>
+    </section> {% endcomment %}
 
 {% comment %} {% include 'partials/footer.liquid' %} {% endcomment %}
 
