--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -141,6 +141,9 @@ footer {
     position: relative;
     overflow: hidden;
     display: none;
+    @media (min-width: 768px) {
+        display: block;
+    }
   }
   
   .featured-art img {
