--- a/views/partials/footer.liquid
+++ b/views/partials/footer.liquid
@@ -1,6 +1,6 @@
 <footer>
-    <h5>
+    {% comment %} <h5>
         <a class="degreesLink" href="https://270degrees.io/">270Degrees</a>
-    </h5>
+    </h5> {% endcomment %}
     {% comment %} <h5 class="rijksLink">Rijksmuseum</h5> {% endcomment %}
 </footer>
