#16 One Column Layout - Detail page

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -25,6 +25,7 @@
     --white-text: #fff;
     --active-color: #597C8B;
     --hover-color: #984A4A;
+    --wall-color: #4b4c54;
 
     /* fonts */
     --primary-font: 'futura-bold', sans-serif;
