--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -99,7 +99,6 @@ main {
     opacity: 0.5;
     transform: translateX(-50%) rotate(-35deg);
     z-index: -1;
-    pointer-events: none; /* optioneel: voorkomt klikken */
     @media (min-width: 1366px ) {
         width: 70vw;
         top: 50%;
@@ -217,3 +216,54 @@ footer {
   .art-details a {
     text-decoration: underline;
   }
+
+/* Detail Page Styling */
+
+.art-wall {
+    overflow-x: hidden;
+    background-color: var(--wall-color);
+    color: var(--white-text);
+    position: relative;
+    padding: 10rem;
+    height: 100vh;
+    width: 100vw;
+  
+    display: flex;
+    text-align: center;
+    align-items: center;    
+    justify-content: center;
+    flex-direction: column;
+  
+    h2 {
+        font-size: var(--size-s);
+    }
+    a {
+      color: var(--white-text);
+      margin: 1rem;
+    }
+  }
+
+.art-on-wall {
+    box-shadow: 7px 7px 5px black;
+    width: 60vw;
+}
+
+.maker-name {
+    font-size: var(--size-s);
+}
+
+.year-released {
+    font-size: var(--size-xs);
+}
+
+.fancy-border {
+    display: inline-block;
+    margin: 1rem;
+    padding: 1rem;
+    border: 25px solid #fff;
+    border-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75'%3E%3Cg fill='none' stroke='%23B88846' stroke-width='2'%3E%3Cpath d='M1 1h73v73H1z'/%3E%3Cpath d='M8 8h59v59H8z'/%3E%3Cpath d='M8 8h16v16H8zM51 8h16v16H51zM51 51h16v16H51zM8 51h16v16H8z'/%3E%3C/g%3E%3Cg fill='%23B88846'%3E%3Ccircle cx='16' cy='16' r='2'/%3E%3Ccircle cx='59' cy='16' r='2'/%3E%3Ccircle cx='59' cy='59' r='2'/%3E%3Ccircle cx='16' cy='59' r='2'/%3E%3C/g%3E%3C/svg%3E")
+      25;
+  }
+
+  
+  
