--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/stylesheet.css">
-    <link rel="stylesheet" href="/styles/main-style.css">`
+    <link rel="stylesheet" href="/styles/main-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="/scripts/script.js" defer></script>
+        <script src="/scripts/270viewer.js" defer></script>
+    <script defer>window.TSDAPIKEY = '645c0808-b5fb-4d15-8986-ffb6a267af2d';</script>
+    <script src="https://api.270degrees.nl/api/script/latest/viewer.js" defer></script>
     <title>Rijksmuseum x 270</title>
 </head>
 <body>
