--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -26,6 +26,8 @@
     --active-color: #597C8B;
     --hover-color: #984A4A;
     --wall-color: #4b4c54;
+    --heart-color: #e63946;
+    --fav-color: gold;
 
     /* fonts */
     --primary-font: 'futura-bold', sans-serif;
@@ -57,6 +59,10 @@
     
 }
     
+@view-transition {
+    navigation: auto;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
