--- a/views/partials/art-list.liquid
+++ b/views/partials/art-list.liquid
@@ -16,7 +16,7 @@
 {% endfor %}
 
   <div class="art-list">
-    <h2>Rijksmuseum</h2>
+    <h2 class="list-title">Rijksmuseum</h2>
     {% for art in art %}
     <div class="art-item">
       <img src="{{ art.webImage.url }}" alt="{{ art.title }}">
