--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -1,162 +1,165 @@
 @font-face {
-    font-family: futura-bold;
-    src:url('/assets/fonts/Futura-Bold-font.ttf');
+  font-family: futura-bold;
+  src: url("/assets/fonts/Futura-Bold-font.ttf");
 }
 @font-face {
-    font-family: futura-medium;
-    src:url('/assets/fonts/futura-medium-bt.ttf');
+  font-family: futura-medium;
+  src: url("/assets/fonts/futura-medium-bt.ttf");
 }
 @font-face {
-    font-family: futura-book;
-    src:url('/assets/fonts/Futura-Book-font.ttf');
+  font-family: futura-book;
+  src: url("/assets/fonts/Futura-Book-font.ttf");
 }
 @font-face {
-    font-family: futura-heavy;
-    src:url('/assets/fonts/Futura-Heavy-font.ttf');
+  font-family: futura-heavy;
+  src: url("/assets/fonts/Futura-Heavy-font.ttf");
 }
 
 :root {
-    /* colors */
-    --background-color: #EEEBE3;
-    --secondary-color: #F8F8F8;
+  /* colors */
+  --background-color: #eeebe3;
+  --secondary-color: #f8f8f8;
 
-    --text-color: #000;
-    --heading-color: #B5875F;
-    --white-text: #fff;
-    --active-color: #597C8B;
-    --hover-color: #984A4A;
-    --wall-color: #4b4c54;
-    --heart-color: #e63946;
-    --fav-color: gold;
+  --text-color: #000;
+  --heading-color: #b5875f;
+  --white-text: #fff;
+  --active-color: #597c8b;
+  --hover-color: #984a4a;
+  --wall-color: #4b4c54;
+  --heart-color: #e63946;
+  --fav-color: gold;
 
-    /* fonts */
-    --primary-font: 'futura-bold', sans-serif;
-    --primary-font-extra: 'futura-heavy', sans-serif;
-    --secondary-font: 'futura-medium', Tahoma;;
-    --paragraph-font: 'futura-book', Tahoma;
+  /* fonts */
+  --primary-font: "futura-bold", sans-serif;
+  --primary-font-extra: "futura-heavy", sans-serif;
+  --secondary-font: "futura-medium", Tahoma;
+  --paragraph-font: "futura-book", Tahoma;
 
-    /* Main font sizes */
+  /* Main font sizes */
 
-    --heading-1: 3rem;
-    --heading-2: 2.625rem;
-    --heading-3: 2.5rem;
-    --heading-4: 2rem;
-    --heading-5: 1.75rem;
-    --heading-6: 1.5rem;
-    
-    /* extra font sizes */
-    --size-extral: 6rem;
-    --size-xxxl: 5rem;
-    --size-xxl: 3.75rem;
-    --size-xl: 3rem;
-    --size-lg: 2.625rem;
-    --size-md: 2.5rem;
-    --size-sm: 2rem;
-    --size-s: 1.75rem;
-    --size-xs: 1.5rem;
-    --size-xxs: 1.25rem;
-    --size-default: 1rem;
-    
+  --heading-1: 3rem;
+  --heading-2: 2.625rem;
+  --heading-3: 2.5rem;
+  --heading-4: 2rem;
+  --heading-5: 1.75rem;
+  --heading-6: 1.5rem;
+
+  /* extra font sizes */
+  --size-extral: 6rem;
+  --size-xxxl: 5rem;
+  --size-xxl: 3.75rem;
+  --size-xl: 3rem;
+  --size-lg: 2.625rem;
+  --size-md: 2.5rem;
+  --size-sm: 2rem;
+  --size-s: 1.75rem;
+  --size-xs: 1.5rem;
+  --size-xxs: 1.25rem;
+  --size-default: 1rem;
 }
-    
+
 @view-transition {
-    navigation: auto;
+  navigation: auto;
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-
 body {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    overflow-x: hidden;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  overflow-x: hidden;
 }
 
 h1 {
-    font-family: var(--primary-font-extra);
-    font-size: var(--size-xxl);
+  font-family: var(--primary-font-extra);
+  font-size: var(--size-xxl);
 }
-    
-h2, h3, h4, h5, h6, a {
-    font-family: var(--secondary-font);
+
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+  font-family: var(--secondary-font);
 }
 
 h2 {
-    font-size: var(--heading-2);
+  font-size: var(--heading-2);
 }
 
 h3 {
-    font-size: var(--heading-3);
+  font-size: var(--heading-3);
 }
 
 h4 {
-    font-size: var(--heading-4);
+  font-size: var(--heading-4);
 }
 
 h5 {
-    font-size: var(--heading-5);
+  font-size: var(--heading-5);
 }
 
 h6 {
-    font-size: var(--heading-6);
+  font-size: var(--heading-6);
 }
 
-p{
-    font-family: var(--paragraph-font);
+p {
+  font-family: var(--paragraph-font);
 }
 
 a {
-    text-decoration: none;
-    color: var(--text-color);
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 /* This class makes sure the content u wrote under this class is only visible for screenreaders */
 
 .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 /* Hamburger Menu */
 
 .hamburger-menu {
-    display: flex;
-    flex-direction: column;
-    background: none;
-    border: none;
-    &:hover {
-        transform: scale(1.1);
-        transition: transform 0.3s ease-in-out;
-    }
+  display: flex;
+  flex-direction: column;
+  background: none;
+  border: none;
+  &:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+  }
 }
 
 .bar {
-    display: block;
-    height: 8px;
-    background-color: black;
-    margin-bottom: 6px;
+  display: block;
+  height: 8px;
+  background-color: black;
+  margin-bottom: 6px;
 }
 
 .bar1 {
-    width: 80px;
-    margin-left: 0;
-  }
-  .bar2 {
-    width: 60px;
-    margin-left: 20px;
-  }
-  .bar3 {
-    width: 40px;
-    margin-left: 40px;
-  }
+  width: 80px;
+  margin-left: 0;
+}
+.bar2 {
+  width: 60px;
+  margin-left: 20px;
+}
+.bar3 {
+  width: 40px;
+  margin-left: 40px;
+}
