#19 Added ID to the div for the viewer

--- a/views/partials/single-art.liquid
+++ b/views/partials/single-art.liquid
@@ -3,7 +3,7 @@
     <a href="/artwork">Terug</a>
     <h2>{{ art.title }}</h2>
     {% if art.webImage %}
-        <div class="fancy-border">
+        <div class="fancy-border" id="wanttobemodel">
         <img class="art-on-wall" src="{{ art.webImage.url }}" alt="{{ art.title }}" width="300" />
         </div>
     {% endif %}
