--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -28,6 +28,7 @@
   --wall-color: #4b4c54;
   --heart-color: #e63946;
   --fav-color: gold;
+  --test: #0000001a;
 
   /* fonts */
   --primary-font: "futura-bold", sans-serif;
