--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -148,7 +148,7 @@ footer {
 .featured-art img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .featured-art .caption {
@@ -156,6 +156,8 @@ footer {
   bottom: 2rem;
   left: 2rem;
   color: white;
+  background-color: var(--test);
+  padding: 1rem;
 }
 
 .featured-art .caption h2 {
@@ -170,7 +172,7 @@ footer {
 
 @keyframes appear {
   from {
-    opacity: 0;
+    opacity: 0.5;
     scale: 0.5;
   }
   to {
