--- a/views/favorites.liquid
+++ b/views/favorites.liquid
@@ -3,7 +3,7 @@
 {% include 'partials/header.liquid' %}
 
 <section class="art-wall">
-    <h1>Jouw favoriete kunstwerken</h1>
+    <h1 class="fav-title">Jouw favoriete kunstwerken</h1>
     <div class="fav-container">
         {% include 'partials/art-list.liquid' %}
     </div>
