--- a/public/styles/main-style.css
+++ b/public/styles/main-style.css
@@ -8,7 +8,7 @@ header {
   justify-content: flex-end;
   align-items: flex-end;
   padding: 1.5rem;
-  z-index: 5;
+  z-index: 999;
   .hamburger-menu {
     z-index: 999;
   }
@@ -16,12 +16,15 @@ header {
     background-color: white;
     position: fixed;
     top: 0;
-    right: -50vw;
+    right: -60vw;
     padding: 3rem;
     height: 100vh;
-    width: 40vw;
+    width: 50vw;
     z-index: 998;
     transition: right 0.3s ease-in-out;
+    @media (min-width: 768px) {
+      width: 40vw;
+    }
     &.active {
       right: 0;
     }
@@ -55,6 +58,7 @@ main {
     position: absolute;
     top: 13%;
     z-index: -1;
+    font-size: var(--size-xl);
     @media (min-width: 768px) {
       left: 15%;
       font-size: var(--size-xxxl);
@@ -69,11 +73,11 @@ main {
     margin-left: 3rem;
   }
   .hero-image {
-    width: 22rem;
+    width: 18rem;
     position: sticky;
     top: 0;
     left: 50%;
-    transform: translateX(-20vw) translateY(35vh);
+    transform: translateX(-27vw) translateY(35vh);
     z-index: -1;
     @media (min-width: 768px) {
       top: 0;
@@ -125,6 +129,10 @@ footer {
 
 .artwork-main {
   padding: 1rem;
+  padding-top: 3rem;
+  @media (min-width: 768px) {
+    padding-top: 1rem;
+  }
   h1 {
     color: var(--heading-color);
   }
@@ -226,7 +234,7 @@ footer {
   background-color: var(--wall-color);
   color: var(--white-text);
   position: relative;
-  padding: 10rem;
+  padding: 5rem;
   height: 100vh;
   width: 100vw;
 
@@ -237,7 +245,7 @@ footer {
   flex-direction: column;
 
   h2 {
-    font-size: var(--size-s);
+    font-size: var(--size-xs);
     @media (min-width: 1024px) {
       font-size: var(--size-lg);
     }
